deploy/k8s/staging/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-cdn-http-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-cdn-http-service
  template:
    metadata:
      labels:
        app: gau-cdn-http-service
    spec:
      containers:
        - name: gau-cdn-http-service
          image: iamqbao/gau_cdn_service:latest
          resources:
            requests:
              cpu: "300m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cdn-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cdn-service
  template:
    metadata:
      labels:
        app: redis-cdn-service
    spec:
      containers:
        - name: redis-cdn-service
          image: redis:7.2-alpine
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
